Added recharts with vite runtime

--- a/examples/user-admin-app/package.json
+++ b/examples/user-admin-app/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "toolpad dev",
-    "build": "toolpad build",
-    "start": "toolpad start"
+    "dev": "toolpad dev --viteRuntime",
+    "build": "toolpad build --viteRuntime",
+    "start": "toolpad start --viteRuntime"
   },
   "dependencies": {
-    "@mui/toolpad": "^latest"
+    "@mui/toolpad": "^latest",
+    "recharts": "^2.6.1"
   }
 }
