--- a/examples/user-admin-app/toolpad/pages/user_details_app/page.yml
+++ b/examples/user-admin-app/toolpad/pages/user_details_app/page.yml
@@ -12,7 +12,6 @@ spec:
           props:
             sx:
               border: 1
-              borderColor: primary.main
             elevation: 0
           children:
             - component: PageRow
@@ -44,51 +43,40 @@ spec:
                             horizontalAlign: center
                           props:
                             sx:
-                              color: primary.main
                               fontWeight: bold
                             value: Acme corp. admin app
-                            variant: h4
+                            variant: h5
                     - component: Text
                       name: typography4
                       props:
                         value: Acme corp. is a global e-com company and this is a support application to
                           add new users
-                    - component: Paper
-                      name: paper3
-                      layout:
-                        columnSize: 1
+                    - component: PageRow
+                      name: pageRow2
                       props:
-                        sx:
-                          bgcolor: primary.main
+                        justifyContent: start
                       children:
-                        - component: PageRow
-                          name: pageRow5
-                          children:
-                            - component: Text
-                              name: typography1
-                              layout:
-                                columnSize: 1.7493609828496042
-                              props:
-                                sx:
-                                  color: common.white
-                                value: User list
-                                variant: h6
-                            - component: Button
-                              name: button1
-                              layout:
-                                columnSize: 0.25063901715039577
-                                horizontalAlign: end
-                              props:
-                                size: medium
-                                content: REFRESH
-                                onClick:
-                                  $$jsExpressionAction: get.refetch()
-                                variant: outlined
-                                color: secondary
-                                loading: false
-                                sx:
-                                  color: common.white
-                                  borderColor: common.white
+                        - component: Text
+                          name: typography1
+                          layout:
+                            columnSize: 1.7057728416939433
+                            horizontalAlign: center
+                          props:
+                            value: User list
+                            variant: h4
+                        - component: Button
+                          name: button1
+                          layout:
+                            columnSize: 0.2942271583060568
+                            horizontalAlign: center
+                          props:
+                            variant: outlined
+                            size: medium
+                            content: REFRESH
+                            onClick:
+                              $$jsExpressionAction: get.refetch()
+                            color: primary
+                            loading: false
                     - component: DataGrid
                       name: dataGrid2
                       props:
@@ -118,25 +106,17 @@ spec:
                           - field: image
                             type: image
                     - component: Paper
-                      name: paper1
+                      name: paper
+                      props:
+                        elevation: 0
+                    - component: Text
+                      name: typography2
+                      props:
+                        value: Form to add a new user
+                        variant: h4
                       layout:
                         columnSize: 1
-                      props:
-                        sx:
-                          bgcolor: primary.main
-                      children:
-                        - component: PageRow
-                          name: pageRow1
-                          children:
-                            - component: Text
-                              name: typography2
-                              layout:
-                                columnSize: 1
-                              props:
-                                sx:
-                                  color: common.white
-                                value: Form to add a new user
-                                variant: h6
+                        horizontalAlign: center
                     - component: Form
                       name: form
                       layout:
@@ -261,15 +241,14 @@ spec:
                                             multiple: false
   queries:
     - name: get
-      enabled: true
       query:
-        function: getCustomers
         kind: local
+        function: getCustomers
       parameters:
         - name: name
           value: hi
+      enabled: true
     - name: add
-      mode: mutation
       query:
         function: addCustomer
         kind: local
@@ -314,3 +293,4 @@ spec:
           value:
             $$jsExpression: |
               id_number.value
+      mode: mutation
