Add jest tests for `create-toolpad-app` (#1965)
Co-authored-by: Jan Potoms <2109932+Janpot@users.noreply.github.com>

--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -24,12 +24,14 @@
     "prebuild": "rimraf ./dist",
     "build": "tsup",
     "dev": "tsup --watch",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --forceExit"
   },
   "engines": {
     "node": ">=16.17"
   },
   "dependencies": {
+    "@mui/toolpad-utils": "^0.1.10",
     "chalk": "5.2.0",
     "execa": "7.1.1",
     "inquirer": "9.2.2"
