--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -12,8 +12,8 @@
     "build:cli": "tsup",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
     "build:typings": "ts-node --esm ./scripts/typings.mts",
+    "build:editor": "vite build ./src/toolpad",
     "dev:cli": "tsup --watch",
-    "dev:editor": "vite ./src/toolpad",
     "dev:typings": "yarn build:typings",
     "waitForApp": "ts-node --esm ./scripts/waitForApp.mts",
     "check-types": "tsc --noEmit",
