--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dev": "dotenv cross-env FORCE_COLOR=1 lerna -- run dev --stream --parallel --ignore docs",
     "docs:dev": "yarn workspace docs dev",
     "docs:build": "yarn workspace docs build",
+    "docs:build:api": "ts-node --esm ./scripts/buildApi.mts",
     "docs:export": "yarn workspace docs export",
     "eslint": "eslint . --report-unused-disable-directives --ext .js,.ts,.tsx",
     "jsonlint": "node ./scripts/jsonlint.mjs",
@@ -96,6 +97,7 @@
     "cross-env": "7.0.3",
     "dotenv-cli": "7.2.1",
     "inquirer": "9.2.2",
+    "lodash-es": "^4.17.21",
     "semver": "7.5.0",
     "ts-node": "10.9.1",
     "tsup": "6.7.0",
