--- a/package.json
+++ b/package.json
@@ -91,7 +91,6 @@
     "yarn-deduplicate": "6.0.1"
   },
   "dependencies": {
-    "@janpotoms/zod-to-json-schema": "3.20.6",
     "archiver": "5.3.1",
     "cross-env": "7.0.3",
     "dotenv-cli": "7.2.1",
@@ -100,7 +99,8 @@
     "ts-node": "10.9.1",
     "tsup": "6.7.0",
     "yargs": "17.7.2",
-    "zod": "3.21.4"
+    "zod": "3.21.4",
+    "zod-to-json-schema": "^3.21.1"
   },
   "engines": {
     "npm": "please-use-yarn",
