--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,6 +149,11 @@ jobs:
       - run:
           name: 'Build packages'
           command: yarn release:build
+      - run:
+          name: '`yarn docs:build:api` changes committed?'
+          command: |
+            yarn docs:build:api
+            git diff --exit-code
       - save_cache:
           name: Save Next.js cache
           key: v0-next-{{ checksum "yarn.lock" }}
