Improve isolation of runtime from editor

--- a/packages/toolpad-utils/package.json
+++ b/packages/toolpad-utils/package.json
@@ -20,6 +20,11 @@
       "types": "./dist/*.d.ts",
       "import": "./dist/*.js",
       "require": "./dist/*.cjs"
+    },
+    "./hooks/*": {
+      "types": "./dist/hooks/*.d.ts",
+      "import": "./dist/hooks/*.js",
+      "require": "./dist/hooks/*.cjs"
     }
   },
   "files": [
