--- a/examples/github-repo-monitoring-app/package.json
+++ b/examples/github-repo-monitoring-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dog-app",
+  "name": "github-repo-monitoring-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,6 @@
     "start": "toolpad start"
   },
   "dependencies": {
-    "@mui/toolpad": "^latest"
+    "@mui/toolpad": "^0.1.11"
   }
 }
