--- a/packages/toolpad-utils/package.json
+++ b/packages/toolpad-utils/package.json
@@ -40,7 +40,7 @@
     "prebuild": "rimraf dist",
     "build": "tsup",
     "dev": "tsup --watch",
-    "check-types": "yarn build",
+    "check-types": "tsc --noEmit",
     "test": "jest"
   },
   "bugs": {
