--- a/packages/toolpad-utils/tsconfig.json
+++ b/packages/toolpad-utils/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "module": "ESNext",
-    "moduleResolution": "nodenext",
+    "moduleResolution": "bundler",
     "alwaysStrict": true,
     "rootDir": "src",
     "outDir": "dist",
