--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -35,7 +35,7 @@
     "prebuild": "rimraf dist",
     "build": "tsup",
     "dev": "tsup --watch",
-    "check-types": "yarn build"
+    "check-types": "tsc --noEmit"
   },
   "bugs": {
     "url": "https://github.com/mui/mui-toolpad/issues"
