--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -33,7 +33,7 @@
     "prebuild": "rimraf dist",
     "build": "tsup",
     "dev": "tsup --watch",
-    "check-types": "tsc"
+    "check-types": "tsup && tsc --noEmit"
   },
   "bugs": {
     "url": "https://github.com/mui/mui-toolpad/issues"
