Replace polling for updates with websocket (#2007)

--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -128,6 +128,7 @@
     "ts-node": "10.9.1",
     "vite": "4.3.5",
     "whatwg-url": "12.0.1",
+    "ws": "^8.13.0",
     "yaml": "2.2.2",
     "yaml-diff-patch": "2.0.0",
     "yargs": "17.7.2",
@@ -151,6 +152,7 @@
     "@types/react-is": "^18.2.0",
     "@types/serialize-javascript": "5.0.2",
     "@types/whatwg-url": "11.0.0",
+    "@types/ws": "^8.5.4",
     "ajv": "8.12.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
