--- a/packages/toolpad-utils/package.json
+++ b/packages/toolpad-utils/package.json
@@ -20,6 +20,11 @@
       "types": "./dist/*.d.ts",
       "import": "./dist/*.js",
       "require": "./dist/*.cjs"
+    },
+    "./hooks/*": {
+      "types": "./dist/hooks/*.d.ts",
+      "import": "./dist/hooks/*.js",
+      "require": "./dist/hooks/*.cjs"
     }
   },
   "files": [
@@ -35,7 +40,7 @@
     "prebuild": "rimraf dist",
     "build": "tsup",
     "dev": "tsup --watch",
-    "check-types": "yarn build",
+    "check-types": "tsup && tsc --noEmit",
     "test": "jest"
   },
   "bugs": {
