--- a/docs/data/toolpad/components/manifest.json
+++ b/docs/data/toolpad/components/manifest.json
@@ -10,6 +10,10 @@
       "subheader": "Components",
       "children": [
         {
+          "title": "Autocomplete",
+          "pathname": "/toolpad/components/autocomplete"
+        },
+        {
           "title": "Button",
           "pathname": "/toolpad/components/button"
         },
