--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -7,6 +7,9 @@
     "allowImportingTsExtensions": true
   },
   "ts-node": {
-    "transpileOnly": true
+    "transpileOnly": true,
+    "moduleTypes": {
+      "../node_modules/@mui/monorepo/packages/api-docs-builder/**/*": "esm"
+    }
   }
 }
