--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint": "eslint . --report-unused-disable-directives --ext .js,.ts,.tsx",
     "jsonlint": "node ./scripts/jsonlint.mjs",
     "release:build": "lerna run --ignore docs --stream build",
-    "release:version": "lerna version --no-changelog --no-push --no-git-tag-version",
+    "release:version": "lerna version --exact --no-changelog --no-push --no-git-tag-version",
     "release:publish": "lerna publish from-package --force-publish --no-git-tag-version --no-push --no-git-reset",
     "release:publish-canary": "lerna publish from-package  --force-publish --no-git-tag-version --no-push --no-git-reset --pre-dist-tag canary",
     "release:changelog": "dotenv -- node ./scripts/releaseChangelog.mjs --repo mui-toolpad",
