--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -31,7 +31,7 @@
     "node": ">=16.17"
   },
   "dependencies": {
-    "@mui/toolpad-utils": "^0.1.12",
+    "@mui/toolpad-utils": "0.1.12",
     "chalk": "5.2.0",
     "execa": "7.1.1",
     "inquirer": "9.2.5"
