--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -52,9 +52,9 @@
     "@mui/lab": "5.0.0-alpha.130",
     "@mui/material": "5.13.1",
     "@mui/system": "5.13.1",
-    "@mui/toolpad-components": "^0.1.12",
-    "@mui/toolpad-core": "^0.1.12",
-    "@mui/toolpad-utils": "^0.1.12",
+    "@mui/toolpad-components": "0.1.12",
+    "@mui/toolpad-core": "0.1.12",
+    "@mui/toolpad-utils": "0.1.12",
     "@mui/types": "7.2.4",
     "@mui/utils": "5.13.1",
     "@mui/x-data-grid": "6.5.0",
