--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -41,8 +41,8 @@
   "dependencies": {
     "@mui/lab": "5.0.0-alpha.130",
     "@mui/material": "5.13.1",
-    "@mui/toolpad-core": "^0.1.12",
-    "@mui/toolpad-utils": "^0.1.12",
+    "@mui/toolpad-core": "0.1.12",
+    "@mui/toolpad-utils": "0.1.12",
     "@mui/x-data-grid-pro": "6.5.0",
     "@mui/x-date-pickers": "6.5.0",
     "dayjs": "1.11.7",
