--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -41,7 +41,7 @@
     "url": "https://github.com/mui/mui-toolpad/issues"
   },
   "dependencies": {
-    "@mui/toolpad-utils": "^0.1.12",
+    "@mui/toolpad-utils": "0.1.12",
     "@tanstack/react-query": "4.29.7",
     "quickjs-emscripten": "0.23.0",
     "react-error-boundary": "4.0.4",
