--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -31,8 +31,8 @@
     "toolpad": "./index.cjs"
   },
   "dependencies": {
-    "@mui/toolpad-app": "^0.1.12",
-    "@mui/toolpad-core": "^0.1.12",
+    "@mui/toolpad-app": "0.1.12",
+    "@mui/toolpad-core": "0.1.12",
     "arg": "5.0.2",
     "concurrently": "8.0.1",
     "dotenv": "16.0.3",
