Jan review: keep the test binding simple

--- a/test/integration/backend-basic/fixture/toolpad/pages/page1/page.yml
+++ b/test/integration/backend-basic/fixture/toolpad/pages/page1/page.yml
@@ -68,13 +68,6 @@ spec:
               $$jsExpression: |
                 edited.data
     - component: PageRow
-      name: pageRow7
-      children:
-        - component: Text
-          name: text
-          props:
-            value: "source: checksum"
-    - component: PageRow
       name: pageRow8
       children:
         - component: Button
@@ -129,4 +122,4 @@ spec:
         - name: foo
           value:
             $$jsExpression: |
-              text.value.split(" ")?.[1]
+              "checksum"
