--- a/test/integration/backend-basic/fixture/toolpad/pages/page1/page.yml
+++ b/test/integration/backend-basic/fixture/toolpad/pages/page1/page.yml
@@ -67,6 +67,26 @@ spec:
             value:
               $$jsExpression: |
                 edited.data
+    - component: PageRow
+      name: pageRow8
+      children:
+        - component: Button
+          name: button
+          props:
+            variant: outlined
+            size: medium
+            content: Run Manual Query
+            onClick:
+              $$jsExpressionAction: manualQuery.call()
+    - component: PageRow
+      name: pageRow9
+      children:
+        - component: Text
+          name: text1
+          props:
+            value:
+              $$jsExpression: |
+                `destination: ${manualQuery.data?.parameters?.foo}`
   queries:
     - name: hello
       query:
@@ -93,3 +113,13 @@ spec:
       query:
         function: withParams
         kind: local
+    - name: manualQuery
+      mode: mutation
+      query:
+        function: manualQueryWithParams
+        kind: local
+      parameters:
+        - name: foo
+          value:
+            $$jsExpression: |
+              "checksum"
