--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -6,7 +6,7 @@
     "prebuild": "rimraf dist",
     "build": "tsup",
     "dev": "tsup --watch",
-    "check-types": "tsc"
+    "check-types": "tsc --noEmit"
   },
   "exports": {
     "./package.json": "./package.json",
