--- a/examples/showcase/package.json
+++ b/examples/showcase/package.json
@@ -8,7 +8,7 @@
     "start": "toolpad start"
   },
   "dependencies": {
-    "@mui/toolpad": "^latest",
+    "@mui/toolpad": "^0.1.13",
     "recharts": "^2.6.1"
   }
 }
