--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "moduleResolution": "nodenext",
+    "module": "CommonJS",
     "noEmit": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
     "allowImportingTsExtensions": true
   },
   "ts-node": {
     "transpileOnly": true,
     "moduleTypes": {
-      "../packages/toolpad-app/src/server/schema.ts": "esm"
+      "../node_modules/@mui/monorepo/packages/api-docs-builder/**/*": "esm"
     }
   }
 }
