--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@mui/toolpad-utils": "0.1.13",
     "@tanstack/react-query": "4.29.7",
+    "@types/json-schema": "^7.0.12",
     "quickjs-emscripten": "0.23.0",
     "react-error-boundary": "4.0.4",
     "react-is": "18.2.0"
