--- a/examples/showcase/toolpad/pages/AdminApp/page.yml
+++ b/examples/showcase/toolpad/pages/AdminApp/page.yml
@@ -49,7 +49,8 @@ spec:
                     - component: Text
                       name: typography4
                       props:
-                        value: Acme corp. is a global e-com company and this is a support application to
+                        value:
+                          Acme corp. is a global e-com company and this is a support application to
                           add new users
                     - component: PageRow
                       name: pageRow2
@@ -131,7 +132,7 @@ spec:
                         columnSize: 1
                       props:
                         sx:
-                          color: "#EBCFB2"
+                          color: '#EBCFB2'
                         onSubmit:
                           $$jsExpressionAction: |-
                             await update.call(form.value);
@@ -267,7 +268,7 @@ spec:
                         columnSize: 1
                       props:
                         sx:
-                          color: "#EBCFB2"
+                          color: '#EBCFB2'
                         onSubmit:
                           $$jsExpressionAction: |-
                             await add.call(form1.value);
